--- a/app/client/html/register.html
+++ b/app/client/html/register.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="../css/main.css">
     <link rel="stylesheet" type="text/css" href="../css/login.css">
-    <title>Document</title>
+    <title>Register</title>
   </head>
   <body>
     <div class="body-inner">
