--- a/app/client/index.html
+++ b/app/client/index.html
@@ -8,17 +8,19 @@
   </head>
   <body>
     <div class="body-inner">
-      <ul id="pages-list">
+      <ul id="pages-list" style="padding: 20px">
         <li>
           <p>here are links to application pages:</p>
         </li>
-        <li><a href="html/temp-fonts.html">fonts.html</a></li>
-        <li><a href="html/temp-icons.html">icons.html</a></li>
         <li><a href="html/login.html">login.html</a></li>
         <li><a href="html/register.html">register.html</a></li>
         <li><a href="html/chatlist.html">chatlist.html</a></li>
         <li><a href="html/chat_mono.html">chat_mono.html</a></li>
         <li><a href="html/chat_group.html">chat_group.html</a></li>
+        <li><a href="html/contactslist.html">contactslist.html</a></li>
+        <li><a href="html/user-card.html">user-card.html</a></li>
+        <li><a href="html/menu.html">menu.html</a></li>
+        <li><a href="html/settings.html">settings.html</a></li>
       </ul>
     </div>
   </body>
