--- a/app/client/html/login.html
+++ b/app/client/html/login.html
@@ -7,7 +7,7 @@
     <title>Login</title>
   </head>
   <body>
-    <div class="body-inner">
+    <div class="body-inner body-inner_notSignedPage">
       <header class="login-header">
         <nav class="login-header__nav">
           <ul>
