--- a/app/client/html/menu.html
+++ b/app/client/html/menu.html
@@ -26,6 +26,7 @@
           <li class="menu-list__item">Контакти</li>
           <li class="menu-list__item">Список чатів</li>
           <li class="menu-list__item">Новий груповий чат</li>
+          <li class="menu-list__item">Чорний список</li>
           <li class="menu-list__item">Налаштування</li>
           <li class="menu-list__item">Вийти з програми</li>
         </ul>
