--- a/app/client/html/user-card.html
+++ b/app/client/html/user-card.html
@@ -23,14 +23,13 @@
       </header>
       <main class="main">
         <div class="logo logo_user-card">
-          <p class="logo__name">UN</p>
+          <p class="logo__name">PR</p>
         </div>
         <div class="user-info">
           <div class="user-info__name">Philomena Resendez</div>
           <div class="user-info__id">@philomenaRezzz</div>
           <div class="user-info__status">в контактах</div>
         </div>
-        <button class="round-btn" type="button" style="bottom: 60px"><i>&#x4b;</i></button>
         <button class="round-btn" type="button"><i>&#x6a;</i></button>
       </main>
     </div>
