--- a/app/client/html/chat_mono.html
+++ b/app/client/html/chat_mono.html
@@ -22,6 +22,19 @@
         </div>
         <button class="header__menu-btn header__menu-btn_secondary" type="button"><i style="font-size: 30px">&#x4a;</i></button>
       </header>
+      <header class="header">
+        <button class="header__menu-btn header__menu-btn_primary" type="button"><i style="font-size: 35px">&#x61;</i></button>
+        <div class="header__info">
+          <div class="logo">
+            <p class="logo__name">UN</p><img class="logo__img" src="../img/user_logo.png">
+          </div>
+          <div class="header__text-wrapper">
+            <h1 class="header__header">Name Of Current Contact</h1>
+            <h4 class="header__subheader">@dfvnkjriu4u</h4>
+          </div>
+        </div>
+        <button class="header__menu-btn header__menu-btn_secondary" type="button"><i style="font-size: 30px">&#x4a;</i></button>
+      </header>
       <main class="main wjs-scroll" data-scroll="right" data-scroll-hidden="horizontal">
         <div class="wjs-scroll__content-wrapper">
           <div class="wjs-scroll__content">
