--- a/app/client/index.html
+++ b/app/client/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/index.css">
+    <link rel="icon" href="img/logo.png">
     <title>Document</title>
   </head>
   <body>
@@ -14,14 +15,14 @@
         </li>
         <li><a href="html/login.html">login.html</a></li>
         <li><a href="html/register.html">register.html</a></li>
-        <li><a href="html/chatlist.html">chatlist.html</a></li>
-        <li><a href="html/chat_mono.html">chat_mono.html</a></li>
-        <li><a href="html/chat_group.html">chat_group.html</a></li>
-        <li><a href="html/contactslist.html">contactslist.html</a></li>
         <li><a href="html/user-card.html">user-card.html</a></li>
-        <li><a href="html/menu.html">menu.html</a></li>
-        <li><a href="html/settings.html">settings.html</a></li>
+        <li><a href="html/app.html">app.html</a></li>
       </ul>
     </div>
+    <style>
+      li {
+        padding: 10px 0;
+      }
+    </style>
   </body>
 </html>
