шкури готові (крім попапів)

--- a/app/client/html/login.html
+++ b/app/client/html/login.html
@@ -15,6 +15,17 @@
             <li><a class="login-header__link" href="/register">реєстрація</a></li>
           </ul>
         </nav>
+        <div class="lang-switcher">
+          <div class="lang-switcher__img-wrapper"><img class="lang-switcher__img" src="../img/ukraine.png"></div><i>&#x33;</i>
+          <div class="lang-switcher__list">
+            <div class="lang-switcher__list-item">
+              <div class="lang-switcher__img-wrapper"><img class="lang-switcher__img" src="../img/ukraine.png"></div><span class="lang-switcher__name">укр</span>
+            </div>
+            <div class="lang-switcher__list-item">
+              <div class="lang-switcher__img-wrapper"><img class="lang-switcher__img" src="../img/united_kingdom.png"></div><span class="lang-switcher__name">eng</span>
+            </div>
+          </div>
+        </div>
       </header>
       <main class="login-main">
         <h1>My-cha-cha</h1>
