--- a/app/client/html/register.html
+++ b/app/client/html/register.html
@@ -16,7 +16,7 @@
           </ul>
         </nav>
         <div class="lang-switcher">
-          <div class="lang-switcher__img-wrapper"><img class="lang-switcher__img" src="../img/ukraine.png"></div><i>&#x33;</i>
+          <div class="lang-switcher__img-wrapper"><img class="lang-switcher__img" src="../img/ukraine.png"></div><i class="ico">&#x33;</i>
           <div class="lang-switcher__list">
             <div class="lang-switcher__list-item">
               <div class="lang-switcher__img-wrapper"><img class="lang-switcher__img" src="../img/ukraine.png"></div><span class="lang-switcher__name">укр</span>
