--- a/app/client/html/login.html
+++ b/app/client/html/login.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../css/main.css">
     <link rel="icon" href="../img/logo.png">
-    <script src="../js/login.js"></script>
+    <script defer src="../libs-js/wScroll.js"></script>
+    <script defer src="../js/login.js"></script>
     <title>Login</title>
   </head>
   <body>
@@ -30,17 +31,26 @@
         </div>
       </header>
       <main class="login-main">
-        <h1>My-cha-cha</h1>
-        <h4 data-translate="h4">вільний веб-чат</h4>
-        <h5 data-translate="h51">щоб увійти, введіть пароль і логін</h5>
-        <h5 data-translate="h52" style="display: none">щоб почати користуватися чатом, пройдіть реєстрацію</h5>
-        <form name="loginForm" method="post" action="/login">
-          <input name="lang" type="hidden" value="ua">
-          <input name="name" type="name" placeholder="логін…">
-          <input name="pass1" type="password" placeholder="пароль…">
-          <input name="pass2" type="password" placeholder="повторіть пароль…" style="display: none">
-          <button type="submit" data-translate="btn">увійти</button>
-        </form>
+        <div class="login-main__inner wjs-scroll" data-scroll="right" data-scroll-hidden="horizontal">
+          <div class="wjs-scroll__content-wrapper">
+            <div class="wjs-scroll__content">
+              <h1>My-cha-cha</h1>
+              <h4 data-translate="h4">вільний веб-чат</h4>
+              <h5 data-translate="h51">щоб увійти, введіть пароль і логін</h5>
+              <h5 data-translate="h52" style="display: none">щоб почати користуватися чатом, пройдіть реєстрацію</h5>
+              <form name="loginForm" method="post" action="api/login">
+                <input name="lang" type="hidden" value="ua">
+                <input name="name" type="name" placeholder="логін…">
+                <div class="error-info"><i class="ico">&#x73;</i><span></span></div>
+                <input name="pass1" type="password" placeholder="пароль…">
+                <div class="error-info"><i class="ico">&#x73;</i><span></span></div>
+                <input name="pass2" type="password" placeholder="повторіть пароль…" style="display: none">
+                <div class="error-info"><i class="ico">&#x73;</i><span></span></div>
+                <button type="submit" data-translate="btn">увійти</button>
+              </form>
+            </div>
+          </div>
+        </div>
       </main>
       <footer class="login-footer">© waldteufel@ukr.net</footer>
     </div>
