--- a/app/server/public/html/login.html
+++ b/app/server/public/html/login.html
@@ -44,7 +44,7 @@
                 <div class="error-info"><i class="ico">&#x73;</i><span></span></div>
                 <input name="pass2" type="password" placeholder="повторіть пароль…" style="display: none">
                 <div class="error-info"><i class="ico">&#x73;</i><span></span></div>
-                <button type="submit" data-translate="btn">увійти</button>
+                <button id="submitBtn" type="submit" data-translate="btn">увійти</button>
               </form>
             </div>
           </div>
