1. npm-run-all 2. ctrl+f5 з авторизацією

--- a/app/public/html/app.html
+++ b/app/public/html/app.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html><!DOCTYPE html>
+<!DOCTYPE html>
 <html class="wjs-MobileHeightFix" lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../css/main.css">
     <link rel="icon" href="../img/logo.png">
+    <script defer src="../js/main.js"></script>
     <title>My-cha-cha</title>
   </head>
   <body>
@@ -14,11 +15,11 @@
           <button class="header__menu-btn header__menu-btn_primary" type="button" data-target-group="aside" data-target="menu"><i class="ico" style="font-size: 30px">&#x61;</i></button>
           <div class="header__info">
             <div class="logo">
-              <p class="logo__name">UN</p><img class="logo__img" src="../img/user_logo.png">
+              <p class="logo__name">UN</p><img class="logo__img" src="img/users/undefined.jpg">
             </div>
             <div class="header__text-wrapper">
-              <h1 class="header__header">User Name</h1>
-              <h4 class="header__subheader">@hereIsId1239ddfv</h4>
+              <h1 class="header__header"></h1>
+              <h4 class="header__subheader">@</h4>
             </div>
           </div>
           <input class="header__search" type="text">
@@ -342,6 +343,5 @@
       </div>
     </div>
     <div id="widthIndicator"></div>
-    <script defer src="../js/main.js"></script>
   </body>
 </html>
